@@ -13,17 +13,17 @@ from AccessControl import getSecurityManager
 from mordac.quota.testing import MORDAC_QUOTA_INTEGRATION_TESTING
 # from zope.component import getMultiAdapter
 from AccessControl import Unauthorized
+from bs4 import BeautifulSoup
 
 
 def random_generator(size=6, chars=string.ascii_uppercase + string.digits):
-    '''Return a random selection of characters and digits. '''
+    ''' Return a random selection of characters and digits. '''
 
     return ''.join(random.choice(chars) for x in range(size))
 
 
 def print_exception():
     ''' Pretty print the exception. '''
-
     f = StringIO.StringIO()
     print_exc(file=f)
     error_mess = f.getvalue().splitlines()
@@ -35,10 +35,8 @@ def print_exception():
 
 class QuotaViewTestAPI():
     ''' Common Test functionality. '''
-
     def get_quota_view(self):
         ''' Retrieve the quota view. '''
-
         return api.content.get_view(
             name='quotaview',
             context=self.portal,
@@ -46,7 +44,6 @@ class QuotaViewTestAPI():
 
     def get_link_view(self):
         ''' Retrieve the link view. '''
-
         return api.content.get_view(
             name='linkview',
             context=self.portal,
@@ -54,7 +51,6 @@ class QuotaViewTestAPI():
 
     def create_document(self, docId='doc'):
         ''' Create an empty document. '''
-
         return api.content.create(
             container=self.portal,
             type='Document',
@@ -62,7 +58,7 @@ class QuotaViewTestAPI():
             title='A Document')
 
     def print_to_devnull(self, s):
-        ''' '''
+        ''' Send it to the bitbucket. '''
         bitbucket = open(os.devnull, 'w')
         print >>bitbucket, s
         bitbucket.close()
@@ -77,46 +73,39 @@ class MordacQuotaViewAcquisitionTraversalIntegrationTest(unittest.TestCase,
 
     def setUp(self):
         ''' Get the portal and request objects.'''
-
         self.portal = self.layer['portal']
         self.request = self.layer['request']
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
 
     def test_quota_view_exists(self):
         ''' Ascertain whether the view exists. '''
-
         view = self.get_quota_view()
         self.assertIsNotNone(view)
 
     def test_quota_browserlayer_interface_is_registered(self):
         ''' Test that IMordacQuotaLayer is registered. '''
-
         from mordac.quota.interfaces import IMordacQuotaLayer
         from plone.browserlayer import utils
         self.assertIn(IMordacQuotaLayer, utils.registered_layers())
 
     def test_view_with_browser_layer(self):
         ''' Assert the view returns something. '''
-
         view = self.get_quota_view()
         view = view.aq_inner.__of__(self.portal)
         self.assertTrue(view())
 
     def test_view_with_restricted_traverse(self):
         ''' Assert that restricted traversal returns something. '''
-
         view = self.portal.restrictedTraverse('quotaview')
         self.assertTrue(view())
 
     def test_view_with_unrestricted_traverse(self):
         ''' Assert that unrestricted traversal returns something. '''
-
         view = self.portal.unrestrictedTraverse('quotaview')
         self.assertTrue(view())
 
     def test_view_html_structure(self):
         ''' Assert correct html structure. '''
-
         import lxml
         view = self.get_quota_view()
         view = view.aq_inner.__of__(self.portal)
@@ -131,7 +120,6 @@ class MordacQuotaViewSecurityIntegrationTest(unittest.TestCase,
 
     def setUp(self):
         ''' Get the portal and request objects.'''
-
         self.portal = self.layer['portal']
         self.request = self.layer['request']
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
@@ -139,7 +127,6 @@ class MordacQuotaViewSecurityIntegrationTest(unittest.TestCase,
     def test_quota_member_role(self):
         ''' Apply the quotaview to an empty site;
             The view should not be accessable to non Manager roles. '''
-
         setRoles(self.portal, TEST_USER_ID, ['Member'])
         user = getSecurityManager().getUser()
         roles = ['Member', 'Authenticated']
@@ -153,7 +140,6 @@ class MordacQuotaViewSecurityIntegrationTest(unittest.TestCase,
     def test_quota_anonymous_role(self):
         ''' Apply the quotaview to an empty site;
             The view should not be accessable to an anonymous user. '''
-
         logout()
         with self.assertRaises(Unauthorized) as cm:
             self.portal.restrictedTraverse('quotaview')
@@ -163,7 +149,6 @@ class MordacQuotaViewSecurityIntegrationTest(unittest.TestCase,
     def test_quota_manager_role(self):
         ''' Apply the quotaview to an empty site;
             The view should be accessable to the Manager role. '''
-
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
         user = getSecurityManager().getUser()
         roles = ['Manager', 'Authenticated']
@@ -179,7 +164,6 @@ class MordacQuotaViewIntegrationTest(unittest.TestCase,
 
     def setUp(self):
         ''' Get the portal and request objects.'''
-
         self.portal = self.layer['portal']
         self.request = self.layer['request']
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
@@ -187,14 +171,12 @@ class MordacQuotaViewIntegrationTest(unittest.TestCase,
     def test_quota_empty_site(self):
         ''' Apply the quotaview to an empty site;
             the total returned should be zero bytes. '''
-
         view = self.get_quota_view()
         self.assertEqual('0 B', view.total())
 
     def test_quota_empty_document(self):
         ''' Create an empty document at the root of an empty site.
             The total returned should be zero bytes. '''
-
         view = self.get_quota_view()
         self.create_document()
         self.assertEqual('0 B', view.total())
@@ -203,7 +185,6 @@ class MordacQuotaViewIntegrationTest(unittest.TestCase,
         ''' Create a document at the root of an empty
             site and populate it with two kilobytes
             of content. The view should confirm the size. '''
-
         view = self.get_quota_view()
         doc = self.create_document()
         doc.edit(text_format='html', text=random_generator(size=2048))
@@ -213,7 +194,6 @@ class MordacQuotaViewIntegrationTest(unittest.TestCase,
         ''' Create two documents at the root of an empty
             site and populate them with two kilobytes of
              content each. The view should confirm the size. '''
-
         view = self.get_quota_view()
         rtext = random_generator(size=2048)
         self.create_document(docId='doc1').edit(text_format='html', text=rtext)
@@ -224,7 +204,6 @@ class MordacQuotaViewIntegrationTest(unittest.TestCase,
         ''' Check whether the get_objects() function returns a list of
             dictionaries, and that the first dictionary contains the
             proper values. '''
-
         view = self.get_quota_view()
         self.create_document()
         objects = view.get_objects()
@@ -248,21 +227,19 @@ class MordacLinkViewIntegrationTest(unittest.TestCase,
         setRoles(self.portal, TEST_USER_ID, ['Manager'])
 
     def test_link_view_empty_document(self):
-        ''' '''
-
+        ''' An empty document should return an empty list of links. '''
         view = self.get_link_view()
         self.create_document()
         links = view.get_links()
         self.assertEqual(list(links), [])
 
     def test_link_view(self):
-        ''' '''
-
-        body = """
+        ''' One external link '''
+        body = '''
         <p> Help me Spock </p>
         <p>internal<a href="https://www.google.com" data-linktype="external"
-           data-val="https://www.google.com">link</a></p>
-        """
+        data-val="https://www.google.com">link</a></p>
+        '''
         view = self.get_link_view()
         document = self.create_document(docId='doc42')
         document.edit(text_format='html', text=body)
@@ -270,5 +247,20 @@ class MordacLinkViewIntegrationTest(unittest.TestCase,
         self.assertEqual(list(links),
                          [('http://nohost/plone/doc42',
                            ['https://www.google.com'])])
+
+    def test_link_view_html(self):
+        ''' Check whether the rendered HTML has the external link. '''
+        body = '''
+        <p> Help me Spock </p>
+        <p>internal<a href="https://www.google.com" data-linktype="external"
+        data-val="https://www.google.com">link</a></p>
+        '''
+        view = self.get_link_view()
+        document = self.create_document(docId='doc42')
+        document.edit(text_format='html', text=body)
+        soup = BeautifulSoup(view(), 'html.parser')
+        self.assertTrue(soup.body.find_all('li'))
+        # with open('/tmp/mordac.html', 'wb') as location:
+        #     print >> location, soup.prettify().encode('utf-8')
 
 # finis
