@@ -1,3 +1,7 @@
+2018-04-20  Michael Guravage  <guravage@weddell.itf.cwi.nl>
+
+	* test_mordac.py (MordacLinkViewIntegrationTest.test_link_view_html): Check rendered HTML.
+
 2018-04-19  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
 	* test_mordac.py (MordacLinkViewIntegrationTest): Added Mordac Link View tests.
