@@ -1,3 +1,9 @@
+2018-04-20  Michael Guravage  <guravage@weddell.itf.cwi.nl>
+
+	* configure.zcml: Added linkview page template.
+
+	* views.py: Added missing function docstrings.
+
 2018-04-19  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
 	* configure.zcml: Added the zcml for linkview
